# paypact

./: .gitignore  README.md
backend/: index.js  package.json  server.js
contract/: .env
contract/programs/: target-keypair.json
contract/programs/cross-chain-contracts/: Cargo.toml
cross-chain-contracts/: .env  Anchor.toml  package-lock.json
cross-chain-contracts/programs/cross-chain-contracts/: Cargo.toml
cross-chain-contracts/programs/cross-chain-contracts/src/: errors.rs  instructions.rs  lib.rs  state.rs
cross-chain-contracts/tests/: cross-chain-contracts.ts
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  polyfills.js  web3AuthContext.js
frontend/src/components/: Balance.jsx  LoadingOverlay.tsx  PaymentQR.tsx  SendTransaction.jsx  SwitchChain.jsx  UpiPinModal.tsx  WalletConnect.jsx
frontend/src/lib/: contacts.ts  firebase.ts  pacts.ts  pay-desktop.ts  solanapay.ts  user.ts  web3auth.js
frontend/src/pages/: ContactsPage.tsx  CreatePact.tsx  Home.tsx  LandingPage.tsx  MyPacts.tsx  OrganizerDashboard.tsx  PactDetails.tsx  ParticipantPay.tsx  Profile.tsx
frontend/src/stores/: walletStore.js
medhurv/: vite.config.js
w3a-quick-start/: package-lock.json  package.json  tsconfig.json
w3a-quick-start/api/: helius-webhook.ts
w3a-quick-start/src/: App.tsx  main.tsx  web3authContext.tsx
w3a-quick-start/src/components/: Balance.tsx  NavBar.tsx  WalletBar.tsx
w3a-quick-start/src/config/: solana.ts  web3auth.ts
w3a-quick-start/src/lib/: firebase.ts  helius.ts  pacts.ts  (+1 more)
(+18 files in other folders)
